added final style for markup

--- a/index.html
+++ b/index.html
@@ -18,29 +18,24 @@
       <div class="bg bg3"></div>
         <div class="container">
             <div class="row">
-              <div class="col-6 glass">
-                  here goes the description and create project and create todo
-              </div>
-              <div class="col-5">
+              <div class="col">
                 <div class="dropdown glass">
                   <button class=" btn-dropdown dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                      Projects
                   </button>
-                  <div class="dropdown-menu dropdown-menu-center" aria-labelledby="dropdownMenuButton">
+                  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                     <a class="dropdown-item" href="#">Action</a>
                     <a class="dropdown-item" href="#">Another action</a>
                     <a class="dropdown-item" href="#">Something else here</a>
                   </div>
                 </div>
-                  <div class="list-container glass"> 
-                    <ul class="list">
-                      <li>Add Checkbox</li>
-                      <li>Add functionality</li>
-                      <li>Add left content</li>
-                      <li>Debug</li>
-                      <li>Improve!</li>
-                    </ul>
-                  </div>
+                <div class="checkbox-group glass">
+                  <label for=""><input type="checkbox" value="false" id="0">Add create buttons</label>
+                  <label for=""><input type="checkbox" value="false" id="0">Add edit, delete buttons</label>
+                  <label for=""><input type="checkbox" value="false" id="0">Add JS</label>
+                  <label for=""><input type="checkbox" value="false" id="0">Debug</label>
+                  <label for=""><input type="checkbox" value="false" id="0">Improve!</label>
+                </div>
               </div>
             </div>
         </div>
