added functionality and styles to checkboxes

--- a/index.html
+++ b/index.html
@@ -30,11 +30,26 @@
                   </div>
                 </div>
                 <div class="checkbox-group glass">
-                  <label for=""><input type="checkbox" value="false" id="0">Add create buttons</label>
-                  <label for=""><input type="checkbox" value="false" id="0">Add edit, delete buttons</label>
-                  <label for=""><input type="checkbox" value="false" id="0">Add JS</label>
-                  <label for=""><input type="checkbox" value="false" id="0">Debug</label>
-                  <label for=""><input type="checkbox" value="false" id="0">Improve!</label>
+                  <label for="">Add create buttons
+                    <input type="checkbox" checked='checked' id="0">
+                    <span class="checkmark"></span>
+                  </label>
+                  <label for="">Add edit, delete buttons
+                    <input type="checkbox" id="1">
+                    <span class="checkmark"></span>
+                  </label>
+                  <label for="">Add JS
+                    <input type="checkbox" id="2">
+                    <span class="checkmark"></span>
+                  </label>
+                  <label for="">Debug
+                    <input type="checkbox" id="3">
+                    <span class="checkmark"></span>
+                  </label>
+                  <label for="">Improve!
+                    <input type="checkbox" id="4">
+                    <span class="checkmark"></span>
+                  </label>
                 </div>
               </div>
             </div>
