added pencil icon

--- a/index.html
+++ b/index.html
@@ -33,22 +33,27 @@
                   <label for="">Add create buttons
                     <input type="checkbox" checked='checked' id="0">
                     <span class="checkmark"></span>
+                    <img class="pencil" src="pencil.svg" alt="" >
                   </label>
                   <label for="">Add edit, delete buttons
                     <input type="checkbox" id="1">
                     <span class="checkmark"></span>
+                    <img class="pencil" src="pencil.svg" alt="">
                   </label>
                   <label for="">Add JS
                     <input type="checkbox" id="2">
                     <span class="checkmark"></span>
+                    <img class="pencil" src="pencil.svg" alt="">
                   </label>
                   <label for="">Debug
                     <input type="checkbox" id="3">
                     <span class="checkmark"></span>
+                    <img class="pencil" src="pencil.svg" alt="">
                   </label>
                   <label for="">Improve!
                     <input type="checkbox" id="4">
                     <span class="checkmark"></span>
+                    <img class="pencil" src="pencil.svg" alt="">
                   </label>
                 </div>
               </div>
