--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 </div>
                 <div class="checkbox-group glass">
                   <label for="">Add create buttons
-                    <input type="checkbox" checked='checked' id="0">
+                    <input type="checkbox" id="0">
                     <span class="checkmark"></span>
                     <img class="pencil" src="pencil.svg" alt="" >
                   </label>
