--- a/index.html
+++ b/index.html
@@ -21,36 +21,34 @@
               <div class="col">
                 <div class="dropdown glass">
                   <button class=" btn-dropdown dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                     Projects
+                    <span class="btn-text">To-Do App</span>
                   </button>
                   <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
-                    <a class="dropdown-item" href="#">Something else here</a>
+                    <button class="add-project">Add new project</button>
                   </div>
                 </div>
                 <div class="checkbox-group glass">
-                  <label for="">Add create buttons
+                  <label for="" class="group-row" >Add create buttons
                     <input type="checkbox" id="0">
                     <span class="checkmark"></span>
                     <img class="pencil" src="pencil.svg" alt="" >
                   </label>
-                  <label for="">Add edit, delete buttons
+                  <label for="" class="group-row">Add edit, delete buttons
                     <input type="checkbox" id="1">
                     <span class="checkmark"></span>
                     <img class="pencil" src="pencil.svg" alt="">
                   </label>
-                  <label for="">Add JS
+                  <label for="" class="group-row">Add JS
                     <input type="checkbox" id="2">
                     <span class="checkmark"></span>
                     <img class="pencil" src="pencil.svg" alt="">
                   </label>
-                  <label for="">Debug
+                  <label for="" class="group-row">Debug
                     <input type="checkbox" id="3">
                     <span class="checkmark"></span>
                     <img class="pencil" src="pencil.svg" alt="">
                   </label>
-                  <label for="">Improve!
+                  <label for="" class="group-row">Improve!
                     <input type="checkbox" id="4">
                     <span class="checkmark"></span>
                     <img class="pencil" src="pencil.svg" alt="">
@@ -60,7 +58,8 @@
             </div>
         </div>
     </div>
-    <script type="module" src="todo.js"></script>
+    <script type="module" src="state.js"></script>
+    <script type="module" src="style-events.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
   </body>
