--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
                     <span class="btn-text">To-Do App</span>
                   </button>
                   <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                    <button class="add-project">Add new project</button>
+                    <a class="dropdown-item" id="0">To-Do App</a>
+                    <a class="dropdown-item" id="1">JS Calculator</a>
+                    <button class="add-project">Add new project </button>
                   </div>
                 </div>
                 <div class="checkbox-group glass">
@@ -59,6 +61,7 @@
         </div>
     </div>
     <script type="module" src="state.js"></script>
+    <script type="module" src="state-handler.js"></script>
     <script type="module" src="style-events.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
