--- a/index.html
+++ b/index.html
@@ -21,40 +21,23 @@
               <div class="col">
                 <div class="dropdown glass">
                   <button class=" btn-dropdown dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <span class="btn-text">To-Do App</span>
+                    <span class="btn-text">Example Project</span>
                   </button>
                   <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                     <a class="dropdown-item" id="0">To-Do App</a>
                     <a class="dropdown-item" id="1">JS Calculator</a>
-                    <button class="add-project">Add new project </button>
+                    <button class="add-project"> + Add </button>
                   </div>
                 </div>
                 <div class="checkbox-group glass">
-                  <label for="" class="group-row" >Add create buttons
-                    <input type="checkbox" id="0">
-                    <span class="checkmark"></span>
-                    <img class="pencil" src="pencil.svg" alt="" >
-                  </label>
-                  <label for="" class="group-row">Add edit, delete buttons
-                    <input type="checkbox" id="1">
-                    <span class="checkmark"></span>
+                  <div style="display: flex; flex-grow: 1; align-items: center; justify-content: space-between;">
+                    <div style="display: flex; flex: 1; flex-grow: 1; align-items: center;">
+                      <input type="checkbox" id="checkbox-0">
+                      <span class="checkmark"></span>
+                      <label for="" class="group-row">Change project!</label>
+                    </div>
                     <img class="pencil" src="pencil.svg" alt="">
-                  </label>
-                  <label for="" class="group-row">Add JS
-                    <input type="checkbox" id="2">
-                    <span class="checkmark"></span>
-                    <img class="pencil" src="pencil.svg" alt="">
-                  </label>
-                  <label for="" class="group-row">Debug
-                    <input type="checkbox" id="3">
-                    <span class="checkmark"></span>
-                    <img class="pencil" src="pencil.svg" alt="">
-                  </label>
-                  <label for="" class="group-row">Improve!
-                    <input type="checkbox" id="4">
-                    <span class="checkmark"></span>
-                    <img class="pencil" src="pencil.svg" alt="">
-                  </label>
+                  </div>
                 </div>
               </div>
             </div>
@@ -64,6 +47,6 @@
     <script type="module" src="state-handler.js"></script>
     <script type="module" src="style-events.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
   </body>
 </html>
