the events are now working!

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
               <div class="col">
                 <div class="dropdown glass">
                   <button class=" btn-dropdown dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <span class="btn-text">Example Project</span>
+                    <span class="btn-text"></span>
                   </button>
                   <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                     <a class="dropdown-item" id="0">To-Do App</a>
@@ -30,14 +30,7 @@
                   </div>
                 </div>
                 <div class="checkbox-group glass">
-                  <div style="display: flex; flex-grow: 1; align-items: center; justify-content: space-between;">
-                    <div style="display: flex; flex: 1; flex-grow: 1; align-items: center;">
-                      <input type="checkbox" id="checkbox-0">
-                      <span class="checkmark"></span>
-                      <label for="" class="group-row">Change project!</label>
-                    </div>
-                    <img class="pencil" src="pencil.svg" alt="">
-                  </div>
+              
                 </div>
               </div>
             </div>
