Added form for edit/add/delete projects/tasks

--- a/index.html
+++ b/index.html
@@ -45,10 +45,22 @@
               </div>
             </div>
             <div class="checkbox-group glass"></div>
+            <div class="edit-form glass">
+              <div class="edit-title">
+                Add Task!
+              </div>
+              <input type="text" class="edit-name">
+              <div class="button-group">
+                <button class="dismiss"> Erase</button>
+                <button class="resolve">Add</button>
+              </div>
+            </div>
+            <div class="powered">Powered by <span class="name">zJaaal</span></div>
           </div>
         </div>
       </div>
     </div>
+    <script type="module" src="utilities.js"></script>
     <script type="module" src="state.js"></script>
     <script type="module" src="state-handler.js"></script>
     <script type="module" src="style-events.js"></script>
