Fixed hover on touchscreens

--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
         </div>
       </div>
     </div>
-    <script type="module" src="utilities.js"></script>
-    <script type="module" src="state.js"></script>
-    <script type="module" src="state-handler.js"></script>
-    <script type="module" src="style-events.js"></script>
+    <script type="module" src="js/utilities.js"></script>
+    <script type="module" src="js/state.js"></script>
+    <script type="module" src="js/state-handler.js"></script>
+    <script type="module" src="js/style-events.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
