Changed the vision of the project
I realized that I was making spaghetti code so I just will make it simpler to do something that works. In the future ill make the full Project.

--- a/index.html
+++ b/index.html
@@ -27,22 +27,7 @@
       <div class="container">
         <div class="row">
           <div class="col">
-            <div class="dropdown glass">
-              <button
-                class="btn-dropdown dropdown-toggle"
-                type="button"
-                id="dropdownMenuButton"
-                data-toggle="dropdown"
-                aria-haspopup="true"
-                aria-expanded="false"
-              >
-                <span class="btn-text"></span>
-              </button>
-              <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                <a class="dropdown-item" id="0">To-Do App</a>
-                <a class="dropdown-item" id="1">JS Calculator</a>
-                <button class="add-project">+ Add</button>
-              </div>
+            <div class="title glass">To-Do App
             </div>
             <div class="checkbox-group glass"></div>
             <div class="edit-form glass">
@@ -60,10 +45,7 @@
         </div>
       </div>
     </div>
-    <script type="module" src="./js/utilities.js"></script>
-    <script type="module" src="./js/state.js"></script>
     <script type="module" src="./js/state-handler.js"></script>
-    <script type="module" src="./js/style-events.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
