Now it's fully working!

--- a/index.html
+++ b/index.html
@@ -32,13 +32,14 @@
             <div class="checkbox-group glass"></div>
             <div class="edit-form glass">
               <div class="edit-title">
-                Add Task!
+                Edit Task!
               </div>
-              <input type="text" class="edit-name">
+              <input type="text" class="edit-name" disabled>
               <div class="button-group">
-                <button class="dismiss"> Erase</button>
-                <button class="resolve">Add</button>
+                <button class="glass-btn dismiss"> Erase</button>
+                <button class="glass-btn resolve">Edit</button>
               </div>
+              <button class="glass-btn create">Create Task</button>
             </div>
             <div class="powered">Powered by <span class="name">zJaaal</span></div>
           </div>
