--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
               </div>
               <input type="text" class="edit-name" disabled>
               <div class="button-group">
-                <button class="glass-btn dismiss"> Erase</button>
-                <button class="glass-btn resolve">Edit</button>
+                <button class="glass-btn dismiss" disabled> Erase</button>
+                <button class="glass-btn resolve" disabled>Edit</button>
               </div>
               <button class="glass-btn create">Create Task</button>
             </div>
